exports[`CallNoteSaved should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {
        "backgroundColor": "rgba(246, 111, 63, 0.95)",
      },
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 24,
        "paddingRight": 24,
        "paddingTop": 14,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.7,
        }
      }>
      <Image
        source={1} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": undefined,
              "fontSize": 20,
              "paddingBottom": 10,
            },
          ]
        }>
        Call notes saved for:
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#fff",
              },
              Object {
                "fontSize": 24,
                "paddingBottom": 14,
              },
            ],
          ]
        }>
        Wed, Sep 28, 7:34 pm
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.3,
        }
      }>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 5,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "paddingBottom": 17,
                "paddingTop": 15,
              },
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "alignSelf": "stretch",
              },
              undefined,
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Array [
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                  },
                  Object {
                    "color": "#f77040",
                  },
                  undefined,
                  undefined,
                ],
              ]
            }>
            CALL SAME TIME NEXT WEEK?
          </Text>
        </View>
      </TouchableNativeFeedback>
    </View>
  </View>
</View>
`;

exports[`CallNoteSaved should render with an activity 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {
        "backgroundColor": "rgba(246, 111, 63, 0.95)",
      },
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <TouchableNativeFeedback
      onPress={[Function]}>
      <View
        style={
          Array [
            Object {
              "position": "absolute",
              "top": 24,
            },
            Object {},
          ]
        }>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 24,
                "width": 24,
              },
              Object {},
            ]
          } />
      </View>
    </TouchableNativeFeedback>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 24,
        "paddingRight": 24,
        "paddingTop": 14,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.7,
        }
      }>
      <Image
        source={1} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": undefined,
              "fontSize": 20,
              "paddingBottom": 10,
            },
          ]
        }>
        Call notes saved for:
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#fff",
              },
              Object {
                "fontSize": 24,
                "paddingBottom": 14,
              },
            ],
          ]
        }>
        Wed, Sep 28, 7:34 pm
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
            },
            Object {
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#fff",
              },
              Object {
                "fontSize": 24,
                "paddingBottom": 14,
              },
            ],
          ]
        }>
        Act III
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.3,
        }
      }>
      <TouchableNativeFeedback
        onPress={[Function]}>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 5,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "paddingBottom": 17,
                "paddingTop": 15,
              },
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "alignSelf": "stretch",
              },
              undefined,
              undefined,
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#003035",
                  "fontFamily": "Brandon Text",
                },
                Object {
                  "fontSize": 13,
                  "textAlign": "center",
                },
                Array [
                  Object {
                    "fontFamily": "Brandon Text_bold",
                    "fontSize": 13,
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                  },
                  Object {
                    "color": "#f77040",
                  },
                  undefined,
                  undefined,
                ],
              ]
            }>
            CALL SAME TIME NEXT WEEK?
          </Text>
        </View>
      </TouchableNativeFeedback>
    </View>
  </View>
</View>
`;
